--- a/index.html
+++ b/index.html
@@ -58,19 +58,80 @@
             <div class="row justify-content-around">
                 <div class="col-xl-3">
                     <img src="img/internet.png" alt="">
-                    <h3 class="about__h3">Awesome Icons</h3>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <h3 class="about_h3">Awesome Icons</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
                 </div>
                 <div class="col-xl-3">
                     <img src="img/transfer.png" alt="">
-                    <h3 class="about__h3">One Page</h3>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <h3 class="about_h3">One Page</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
                 </div>
                 <div class="col-xl-3">
                     <img src="img/head.png" alt="">
-                    <h3 class="about__h3">Fully Responsive</h3>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <h3 class="about_h3">Fully Responsive</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our Services</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa fa-mobile icon"></i>
+                        <h3 class="about_h3">Research</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa fa-mobile icon"></i>
+                        <h3 class="about_h3">Research</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa fa-mobile icon"></i>
+                        <h3 class="about_h3">Research</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                        <div class="our_card">
+                            <i class="fa fa-mobile icon"></i>
+                            <h3 class="about_h3">Research</h3>
+                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                            <button class="button-services">Read more</button>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="our_card">
+                            <i class="fa fa-mobile icon"></i>
+                            <h3 class="about_h3">Research</h3>
+                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                            <button class="button-services">Read more</button>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="our_card">
+                            <i class="fa fa-mobile icon"></i>
+                            <h3 class="about_h3">Research</h3>
+                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                            <button class="button-services">Read more</button>
+                        </div>
+                    </div>
             </div>
         </div>
     </section>
