--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <header class="menu-bar">
         <div class="container">
             <div class="row">
@@ -40,8 +44,8 @@
                 <div class="col-xl-12">
                     <h1 class="header__title">Web development project</h1>
                     <p class="header__text">Very suitable to support all web development project</p>
-                    <button class="button button_empty">Our services</button>
-                    <button class="button button_full">Hire is now</button>
+                    <button class="button">Our services</button>
+                    <button class="button">Hire is now</button>
                 </div>
             </div>
         </div>
@@ -52,24 +56,28 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <h2 class="about__title">About Us</h2>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
             </div>
             <div class="row justify-content-around">
                 <div class="col-xl-3">
                     <img src="img/internet.png" alt="">
                     <h3 class="about_h3">Awesome Icons</h3>
-                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor</p>
                 </div>
                 <div class="col-xl-3">
                     <img src="img/transfer.png" alt="">
                     <h3 class="about_h3">One Page</h3>
-                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor</p>
                 </div>
                 <div class="col-xl-3">
                     <img src="img/head.png" alt="">
                     <h3 class="about_h3">Fully Responsive</h3>
-                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                    <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor</p>
                 </div>
             </div>
         </div>
@@ -80,65 +88,142 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8">
                     <h2 class="about__title">Our Services</h2>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa fa-mobile icon"></i>
+                        <i class="fa fa-search icon" aria-hidden="true"></i>
                         <h3 class="about_h3">Research</h3>
-                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa fa-mobile icon"></i>
-                        <h3 class="about_h3">Research</h3>
-                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <i class="fa fa-image icon" aria-hidden="true"></i>
+                        <h3 class="about_h3">Portfolio</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa fa-mobile icon"></i>
-                        <h3 class="about_h3">Research</h3>
-                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+                        <i class="fa fa-question icon" aria-hidden="true"></i>
+                        <h3 class="about_h3">Support</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
                 <div class="col-xl-4">
-                        <div class="our_card">
-                            <i class="fa fa-mobile icon"></i>
-                            <h3 class="about_h3">Research</h3>
-                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
-                            <button class="button-services">Read more</button>
-                        </div>
+                    <div class="our_card">
+                        <i class="fa fa-book icon" aria-hidden="true"></i>
+                        <h3 class="about_h3">Documentation</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
                     </div>
-                    <div class="col-xl-4">
-                        <div class="our_card">
-                            <i class="fa fa-mobile icon"></i>
-                            <h3 class="about_h3">Research</h3>
-                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
-                            <button class="button-services">Read more</button>
-                        </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa fa-code icon" aria-hidden="true"></i>
+                        <h3 class="about_h3">Development</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
                     </div>
-                    <div class="col-xl-4">
-                        <div class="our_card">
-                            <i class="fa fa-mobile icon"></i>
-                            <h3 class="about_h3">Research</h3>
-                            <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
-                            <button class="button-services">Read more</button>
-                        </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa fa-pencil-alt icon" aria-hidden="true"></i>
+                        <h3 class="about_h3">Design</h3>
+                        <p class="about_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                            praesentium voluptatum iti atque corrupti quos.</p>
+                        <button class="button-services">Read more</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Latest Works</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                    <button val="on" class="button" filter="all">All</button>
+                    <button val="off" class="button" filter="wd">Web Design</button>
+                    <button val="off" class="button" filter="ud">Ui/Ui Design</button>
+                    <button val="off" class="button" filter="moc">Mockups</button>
+                </div>
+            </div>
+            <div class="row filter">
+                <div filter="wd" class="col-xl-4">
+                    <img src="img/item1.png" alt="">
+                    <div class="text">
+                        <h5>Hand Watch</h5>
+                        <p>Web Design</p>
+                    </div>
+                </div>
+                <div filter="moc" class="col-xl-4">
+                    <img src="img/item2.png" alt="">
+                    <div class="text">
+                        <h5>One Day Pass</h5>
+                        <p>Mockups</p>
+                    </div>
+                </div>
+                <div filter="wd" class="col-xl-4">
+                    <img src="img/item3.png" alt="">
+                    <div class="text">
+                        <h5>Modal T-shirt</h5>
+                        <p>Web Design</p>
+                    </div>
+                </div>
+                <div filter="moc" class="col-xl-4">
+                    <img src="img/item4.png" alt="">
+                    <div class="text">
+                        <h5>Flask</h5>
+                        <p>Mockups</p>
+                    </div>
+                </div>
+                <div filter="ud" class="col-xl-4">
+                    <img src="img/item5.png" alt="">
+                    <div class="text">
+                        <h5>Eplemost</h5>
+                        <p>Ui/Ui Design</p>
+                    </div>
+                </div>
+                <div filter="ud" class="col-xl-4">
+                    <img src="img/item6.png" alt="">
+                    <div class="text">
+                        <h5>The Kitchens</h5>
+                        <p>Ui/Ui Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-12">
+                <button val="on" class="button" filter="all">View All</button>
             </div>
         </div>
     </section>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
